change in package.json

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "format": "prettier --write \" src/**/*.{js,jsx} \" ",
+    "format": "prettier --write \" ./src/**/*.{js,jsx} \" ",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
