--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "format": "prettier --write \" ./src/**/*.{js,jsx} \" ",
+    "format": "prettier --write \"src/**/*.{js,jsx}\" ",
+    "lint": "eslint \"src/**/*.{js,jsx}\" --quiet",
+    "dev": "parcel src/index.html",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
@@ -15,6 +17,7 @@
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "gh-pages": "^3.2.3",
+    "parcel": "^1.12.3",
     "prettier": "^2.4.1"
   }
 }
