--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
     "gh-pages": "^3.2.3",
     "parcel": "^1.12.3",
     "prettier": "^2.4.1"
+  },
+  "dependencies": {
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   }
 }
