--- a/src/.eslintrc.json
+++ b/src/.eslintrc.json
@@ -1,11 +1,16 @@
 {
     "extends": [
         "eslint:recommended",
+        "plugin:import/errors",
+        "plugin:react/recommended",
+        "plugin:jsx-a11y/recommended",
         "prettier"
     ],
-    "plugins": [
-  
-    ],
+    "rules": {
+        "react/prop-types": 0,
+        "react/react-in-jsx-scope": 0
+    },
+    "plugins": ["import","react", "jsx-a11y"],
     "parserOptions": {
         "ecmaVersion": 2021,
         "sourceType": "module",
@@ -17,6 +22,11 @@
         "es6": true,
         "node": true,
         "browser": true
+    },
+    "settings":{
+        "react":{
+            "version":"detect"
+        }
     }
-}
+ }
  
